--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@absolunet/fss": "^1.4.0",
     "prepend-if": "^0.2.1",
+    "publishimo": "^3.6.0",
     "tapable": "^2.0.0-beta.3"
   },
   "devDependencies": {
