--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
   },
   "devDependencies": {
     "babel-jest": "^24.0.0",
-    "babel-preset-jaid": "2.8.0",
+    "babel-preset-jaid": "2.9.0",
     "cross-env": "^5.2.0",
     "debug": "^4.1.1",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-config-jaid": "1.11.0",
     "jest": "^24.0.0",
     "opn-cli": "^4.0.0",
     "rimraf": "^2.6.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-config-jaid": "1.24.1"
+    "webpack-config-jaid": "1.24.2"
   },
   "scripts": {
     "clean": "rimraf dist dist-jsdoc",
     "build:prod": "cross-env NODE_ENV=production webpack",
     "build:dev": "webpack",
-    "test": "npm run build:prod && jest",
+    "test": "jest && npm run build:prod && cross-env MAIN=dist jest",
     "test:dev": "npm run build:dev && jest",
     "test:debug": "node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
     "release": "npm run build:prod && npm publish dist && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
