--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "dependencies": {
     "publishimo": "^4.1.0",
-    "resolve-pkg-option": "^1.0.4",
-    "xml-js": "^1.6.9"
+    "resolve-pkg-option": "^1.0.4"
   },
   "devDependencies": {
     "@absolunet/fsp": "^1.4.0",
