--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "@absolunet/fsp": "^1.4.0",
     "@absolunet/fss": "^1.4.0",
     "babel-jest": "^24.1.0",
-    "babel-preset-jaid": "2.10.0",
+    "babel-preset-jaid-react": "^2.10.0",
     "cross-env": "^5.2.0",
     "debug": "^4.1.1",
     "eslint": "^5.13.0",
-    "eslint-config-jaid": "1.11.0",
+    "eslint-config-jaid-react": "^1.11.0",
     "jest": "^24.1.0",
     "opn-cli": "^4.0.0",
     "rimraf": "^2.6.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
-    "webpack-config-jaid": "2.3.0"
+    "webpack-config-jaid": "^2.3.0"
   },
   "scripts": {
     "clean": "rimraf dist dist-jsdoc test/*/dist",
