--- a/package.json
+++ b/package.json
@@ -2,44 +2,48 @@
   "private": true,
   "version": "1.0.0",
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
-  "babel": {
-    "presets": [
-      "jaid"
+  "eslintConfig": {
+    "extends": "jaid-react"
+  },
+  "ava": {
+    "require": [
+      "@babel/register",
+      "@babel/polyfill"
     ]
   },
-  "eslintConfig": {
-    "extends": "jaid"
-  },
-  "jest": {
-    "testEnvironment": "node"
-  },
   "dependencies": {
-    "publishimo": "^4.1.0",
+    "publishimo": "^4.1.1",
+    "react-reconciler": "^0.20.0",
     "resolve-pkg-option": "^1.0.4"
+  },
+  "peerDependencies": {
+    "react": "^16.8.2"
   },
   "devDependencies": {
     "@absolunet/fsp": "^1.4.0",
     "@absolunet/fss": "^1.4.0",
+    "ava": "^1.2.1",
     "babel-jest": "^24.1.0",
-    "babel-preset-jaid-react": "^2.10.0",
+    "babel-preset-jaid-react": "^3.0.0",
     "cross-env": "^5.2.0",
     "debug": "^4.1.1",
-    "eslint": "^5.13.0",
-    "eslint-config-jaid-react": "^1.11.0",
-    "jest": "^24.1.0",
+    "eslint": "^5.14.1",
+    "eslint-config-jaid-react": "^1.11.1",
     "opn-cli": "^4.0.0",
+    "react": "^16.8.2",
     "rimraf": "^2.6.3",
-    "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
-    "webpack-config-jaid": "^2.3.0"
+    "webpack-config-jaid": "^2.5.1"
   },
   "scripts": {
     "clean": "rimraf dist dist-jsdoc test/*/dist",
+    "babel:prod": "rimraf dist/src-transpiled/production && cross-env NODE_ENV=production babel --out-dir dist/src-transpiled/production --source-maps true src",
+    "babel:dev": "rimraf dist/src-transpiled/production && babel --out-dir dist/src-transpiled/development src",
     "build:prod": "cross-env NODE_ENV=production webpack",
     "build:dev": "webpack",
-    "test": "jest && npm run build:prod && cross-env MAIN=dist jest",
-    "test:dev": "npm run build:dev && jest",
-    "test:debug": "node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
+    "test": "npm run build:prod && cross-env MAIN=dist/package/production jest",
+    "test:dev": "npm run build:dev && MAIN=dist/package/development jest",
+    "test:debug": "npm run build:dev && cross-env DEBUG=\"$(basename $PWD),$(basename $PWD):*\" MAIN=dist/package/development node_modules/.bin/babel-node --inspect=9229 node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --no-cache --verbose",
     "release": "npm test && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
   }
 }
