--- a/package.json
+++ b/package.json
@@ -2,33 +2,33 @@
   "private": true,
   "version": "1.0.0",
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
+  "babel": {
+    "presets": [
+      "jaid-react"
+    ]
+  },
   "eslintConfig": {
     "extends": "jaid-react"
   },
-  "ava": {
-    "require": [
-      "@babel/register",
-      "@babel/polyfill"
-    ]
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "dist/jest/coverage"
   },
   "dependencies": {
     "publishimo": "^4.1.1",
     "react-reconciler": "^0.20.0",
     "resolve-pkg-option": "^1.0.4"
   },
-  "peerDependencies": {
-    "react": "^16.8.2"
-  },
   "devDependencies": {
     "@absolunet/fsp": "^1.4.0",
     "@absolunet/fss": "^1.4.0",
-    "ava": "^1.2.1",
     "babel-jest": "^24.1.0",
-    "babel-preset-jaid-react": "^3.0.0",
+    "babel-preset-jaid-react": "^3.2.0",
     "cross-env": "^5.2.0",
     "debug": "^4.1.1",
     "eslint": "^5.14.1",
     "eslint-config-jaid-react": "^1.11.1",
+    "jest": "^24.1.0",
     "opn-cli": "^4.0.0",
     "react": "^16.8.2",
     "rimraf": "^2.6.3",
@@ -36,14 +36,16 @@
     "webpack-config-jaid": "^2.5.1"
   },
   "scripts": {
-    "clean": "rimraf dist dist-jsdoc test/*/dist",
+    "clean": "rimraf dist/ test/**/dist/",
     "babel:prod": "rimraf dist/src-transpiled/production && cross-env NODE_ENV=production babel --out-dir dist/src-transpiled/production --source-maps true src",
-    "babel:dev": "rimraf dist/src-transpiled/production && babel --out-dir dist/src-transpiled/development src",
+    "babel:dev": "rimraf dist/src-transpiled/development && babel --out-dir dist/src-transpiled/development src",
+    "babel:test": "rimraf dist/src-transpiled/test && cross-env NODE_ENV=test babel --out-dir dist/src-transpiled/test src",
     "build:prod": "cross-env NODE_ENV=production webpack",
     "build:dev": "webpack",
-    "test": "npm run build:prod && cross-env MAIN=dist/package/production jest",
-    "test:dev": "npm run build:dev && MAIN=dist/package/development jest",
-    "test:debug": "npm run build:dev && cross-env DEBUG=\"$(basename $PWD),$(basename $PWD):*\" MAIN=dist/package/development node_modules/.bin/babel-node --inspect=9229 node_modules/jest/bin/jest.js --runInBand --detectOpenHandles --no-cache --verbose",
-    "release": "npm test && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
+    "test": "npm run build:prod && cross-env NODE_ENV=production MAIN=dist/package/production jest --runInBand",
+    "test:coverage": "npm run test:dev -- --coverage --json --outputFile=dist/jest/stats.json",
+    "test:dev": "cross-env NODE_ENV=test jest --runInBand",
+    "test:debug": "cross-env DEBUG=\"$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
+    "release": "npm run clean && npm test && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version"
   }
 }
