--- a/package.json
+++ b/package.json
@@ -2,18 +2,6 @@
   "private": true,
   "version": "1.0.0",
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
-  "babel": {
-    "presets": [
-      "jaid-react"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "jaid-react"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coverageDirectory": "dist/jest/coverage"
-  },
   "dependencies": {
     "debug": "^4.1.1",
     "publishimo": "^5.0.0",
@@ -25,6 +13,7 @@
     "@absolunet/fsp": "^1.4.0",
     "@absolunet/fss": "^1.4.0",
     "babel-jest": "^24.1.0",
+    "babel-preset-jaid": "^5.1.0",
     "babel-preset-jaid-react": "^4.3.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.14.1",
