--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^24.1.0",
     "opn-cli": "^4.0.0",
     "react-devtools": "^3.6.0",
+    "react-test-renderer": "^16.8.3",
     "rimraf": "^2.6.3",
     "webpack-config-jaid": "^3.2.1"
   },
