feat: Added automatic generated development section
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/fragments.yml
+++ b/src/fragments.yml
@@ -3,5 +3,5 @@ warning: Warning
 usage: Usage
 advancedUsage: Advanced Usage
 example: Example
-development: Development
+development: true
 description: true
