feat: Added `jsdoc-babel` for better markdown generation stability
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "debug": "^4.1.1",
     "ensure-array": "^1.0.0",
     "execa": "^4.0.0",
+    "first-existing-path": "^1.0.1",
     "handlebars": "^4.5.3",
     "has-content": "^1.1.0",
+    "jsdoc-babel": "^0.5.0",
+    "jsdoc-export-default-interop": "^0.3.1",
+    "jsdoc-json": "^2.0.2",
     "just-handlebars-helpers": "^1.0.17",
     "pascal-case": "^3.1.1",
     "read-file-json": "^1.0.0",
     "read-file-string": "^1.0.0",
     "read-file-yaml": "^1.0.0",
+    "tempy": "^0.3.0",
     "yargs": "^15.0.2",
     "zahl": "^2.0.3"
   },
