feat: Added fragment `options`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/fragments.yml
+++ b/src/fragments.yml
@@ -3,5 +3,6 @@ warning: Warning
 usage: Usage
 advancedUsage: Advanced Usage
 example: Example
+options: Options
 development: true
 description: true
