--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "test:dev": "NODE_ENV=test jest --runInBand",
     "test:debug": "DEBUG=\"$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
     "prepareActionJest": "npm run build:prod"
-  }
+  },
+  "funding": "https://github.com/sponsors/jaid"
 }
