--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "ensure-array": "^1.0.0",
     "execa": "^4.0.0",
     "first-existing-path": "^1.0.1",
+    "git-url-parse": "^11.1.2",
     "handlebars": "^4.7.1",
     "has-content": "^1.1.0",
     "jsdoc-babel": "^0.5.0",
     "jsdoc-export-default-interop": "^0.3.1",
     "just-handlebars-helpers": "^1.0.17",
+    "normalize-package-data": "^2.5.0",
     "pascal-case": "^3.1.1",
     "read-file-json": "^1.0.1",
     "read-file-string": "^1.0.1",
