--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Overwrites the readme based on info fetched from package.json and source code.",
   "dependencies": {
     "@absolunet/fsp": "^1.6.2",
+    "array-to-object-keys": "^1.3.7",
     "build-url": "^2.0.0",
     "camelcase": "^5.3.1",
     "debug": "^4.1.1",
@@ -12,6 +13,7 @@
     "execa": "^4.0.0",
     "first-existing-path": "^1.0.1",
     "git-url-parse": "^11.1.2",
+    "globby": "^11.0.0",
     "handlebars": "^4.7.1",
     "has-content": "^1.1.0",
     "jsdoc-babel": "^0.5.0",
@@ -19,6 +21,7 @@
     "just-handlebars-helpers": "^1.0.17",
     "normalize-package-data": "^2.5.0",
     "pascal-case": "^3.1.1",
+    "prevent-end": "^1.0.6",
     "read-file-json": "^1.0.1",
     "read-file-string": "^1.0.1",
     "read-file-yaml": "^1.0.1",
