feat: Added support for `usageOptions.yml`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/fragments.yml
+++ b/src/fragments.yml
@@ -3,6 +3,6 @@ warning: Warning
 usage: Usage
 advancedUsage: Advanced Usage
 example: Example
-options: Options
+options: true
 development: true
 description: true
