--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "camelcase": "^5.3.1",
     "debug": "^4.1.1",
     "ensure-array": "^1.0.0",
+    "ensure-object": "^1.0.1",
     "execa": "^4.0.0",
     "first-existing-path": "^1.0.1",
     "git-url-parse": "^11.1.2",
