fix: Fixed duplicate "Example" header
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/fragments.yml
+++ b/src/fragments.yml
@@ -2,7 +2,7 @@ legal: Legal
 warning: Warning
 usage: Usage
 advancedUsage: Advanced Usage
-example: Example
+example: true
 options: true
 development: true
 description: true
