--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "read-file-json": "^1.0.2",
     "read-file-string": "^1.0.4",
     "read-file-yaml": "^1.0.2",
+    "sort-object": "^3.0.3",
     "tempy": "^0.4.0",
     "url-parse": "^1.4.7",
     "yargs": "^15.1.0",
