--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "array-to-object-keys": "^1.3.7",
     "build-url": "^2.0.0",
     "camelcase": "^5.3.1",
+    "chalk": "^4.0.0",
     "debug": "^4.1.1",
     "ensure-array": "^1.0.0",
     "ensure-object": "^1.0.1",
     "execa": "^4.0.0",
+    "filesize": "^6.1.0",
     "first-existing-path": "^1.0.1",
     "git-url-parse": "^11.1.2",
     "globby": "^11.0.0",
