--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "read-file-yaml": "^2.0.0",
     "sort-object": "^3.0.3",
     "url-parse": "^1.5.3",
-    "yargs": "^17.2.1",
-    "zahl": "^2.0.6"
+    "yargs": "^17.2.1"
   },
   "devDependencies": {
     "babel-jest": "^27.2.4",
