--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "handlebars": "^4.7.7",
     "has-content": "^1.1.1",
     "just-handlebars-helpers": "^1.0.18",
+    "lodash-es": "^4.17.21",
     "normalize-package-data": "^3.0.3",
     "pascal-case": "^3.1.2",
     "prevent-end": "^1.0.6",
